--- a/app/src/main/res/layout/activity_repositories.xml
+++ b/app/src/main/res/layout/activity_repositories.xml
@@ -10,15 +10,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:height="50dp"
-        android:textSize="17dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="20dp"
+        android:height="50dp"
         android:background="@color/lightgray"
+        android:gravity="center"
         android:text="XXXX's Repositories"
         android:textColor="@color/white"
-        android:gravity="center
-">
+        android:textSize="17dp"
+        android:drawableLeft="@drawable/ic_baseline_view_list_24"
+        android:paddingHorizontal="70dp"
+        >
 
     </TextView>
 
