--- a/app/src/main/res/layout/activity_repositories.xml
+++ b/app/src/main/res/layout/activity_repositories.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Repositories"
+    tools:context=".RepositoriesActivity"
     android:background="@drawable/back3">
 
     <TextView
@@ -14,20 +14,19 @@
         android:layout_marginTop="20dp"
         android:height="50dp"
         android:background="@color/lightgray"
-        android:gravity="center"
-        android:text="XXXX's Repositories"
-        android:textColor="@color/white"
-        android:textSize="17dp"
         android:drawableLeft="@drawable/ic_baseline_view_list_24"
+        android:gravity="center"
         android:paddingHorizontal="70dp"
-        >
+        android:text="User's Repositories"
+        android:textColor="@color/white"
+        android:textSize="17dp">
 
     </TextView>
 
     <ListView
         android:id="@+id/list"
         android:layout_width="wrap_content"
-        android:layout_height="448dp"
+        android:layout_height="389dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="80dp"
         android:background="@color/white"
@@ -36,11 +35,11 @@
     </ListView>
 
     <Button
+        android:id="@+id/goBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_marginHorizontal="40dp"
-        android:layout_marginTop="530dp"
+        android:layout_marginTop="475dp"
         android:backgroundTint="@color/purple_200"
         android:hint="Back"
         android:textColorHint="@color/white" />
@@ -49,9 +48,8 @@
         android:id="@+id/img"
         android:layout_width="79dp"
         android:layout_height="150dp"
-        android:layout_marginTop="620dp"
         android:layout_marginLeft="10dp"
-        android:width="100px"
+        android:layout_marginTop="550dp"
         android:src="@drawable/logo" />
 
 </RelativeLayout>
