--- a/app/src/main/res/layout/listlayout.xml
+++ b/app/src/main/res/layout/listlayout.xml
@@ -3,6 +3,7 @@
     android:id="@+id/text1"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:textSize="15dp"
-    android:textColor="@color/purple_200"
+    android:textSize="20dp"
+    android:paddingHorizontal="10dp"
+    android:textColor="@color/black"
     />
