--- a/app/src/main/res/layout/listlayout.xml
+++ b/app/src/main/res/layout/listlayout.xml
@@ -3,7 +3,8 @@
     android:id="@+id/text1"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:textSize="20dp"
-    android:paddingHorizontal="10dp"
+    android:textSize="18dp"
+    android:paddingHorizontal="12dp"
     android:textColor="@color/black"
+    android:paddingVertical="10dp"
     />
