--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RepositoriesActivity"
-    android:background="@drawable/back3">
+    android:background="@drawable/back4">
 
     <TextView
         android:id="@+id/nameOfRepo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginTop="20dp"
-        android:height="50dp"
+        android:layout_marginHorizontal="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:height="@dimen/_40sdp"
         android:background="@color/lightgray"
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:gravity="center"
-        android:paddingHorizontal="70dp"
+        android:paddingHorizontal="@dimen/_70sdp"
         android:textColor="@color/white"
-        android:textSize="17dp"
+        android:textSize="@dimen/_13sdp"
        >
 
     </TextView>
@@ -27,13 +27,13 @@
     <TextView
         android:id="@+id/details"
         android:layout_width="match_parent"
-        android:layout_height="389dp"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginTop="80dp"
+        android:layout_height="@dimen/_300sdp"
+        android:layout_marginHorizontal="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_65sdp"
         android:background="@color/white"
         android:cacheColorHint="@color/gray"
         android:gravity="center"
-        android:textSize="18dp"
+        android:textSize="@dimen/_15sdp"
         >
 
     </TextView>
@@ -42,8 +42,8 @@
         android:id="@+id/goBackToRepos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginTop="475dp"
+        android:layout_marginHorizontal="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_366sdp"
         android:backgroundTint="@color/purple_200"
         android:hint="Back to repositories"
         android:textColorHint="@color/white" />
@@ -51,10 +51,9 @@
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="79dp"
-        android:layout_height="150dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="550dp"
-        android:src="@drawable/logo" />
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_marginTop="@dimen/_420sdp"
+        android:src="@drawable/pixe" />
 
 </RelativeLayout>
