--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -14,7 +14,7 @@
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_20sdp"
         android:height="@dimen/_40sdp"
-        android:background="@color/lightgray"
+        android:background="@color/black"
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:gravity="center"
         android:paddingHorizontal="@dimen/_70sdp"
