--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RepositoriesActivity"
-    android:background="@drawable/back4">
+    android:background="@drawable/back4"
+    tools:context=".RepositoriesActivity">
 
     <TextView
         android:id="@+id/nameOfRepo"
@@ -17,10 +18,11 @@
         android:background="@color/black"
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:gravity="center"
-        android:paddingHorizontal="@dimen/_70sdp"
+        android:paddingHorizontal="@dimen/_20sdp"
         android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
-       >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </TextView>
 
@@ -34,7 +36,8 @@
         android:cacheColorHint="@color/gray"
         android:gravity="center"
         android:textSize="@dimen/_15sdp"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </TextView>
 
@@ -46,14 +49,41 @@
         android:layout_marginTop="@dimen/_366sdp"
         android:backgroundTint="@color/purple_200"
         android:hint="Back to repositories"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_marginTop="@dimen/_420sdp"
-        android:src="@drawable/pixe" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/pixe"
+        app:layout_constraintDimensionRatio="1:1.2"
+        app:layout_constraintTop_toTopOf="@id/guideline1"
+        app:layout_constraintBottom_toBottomOf="@id/guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/guideline3"/>
 
-</RelativeLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.96" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
