--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,10 +64,11 @@
         android:layout_height="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/pixe"
-        app:layout_constraintDimensionRatio="1:1.2"
+        app:layout_constraintDimensionRatio="1:1.26"
         app:layout_constraintTop_toTopOf="@id/guideline1"
         app:layout_constraintBottom_toBottomOf="@id/guideline2"
-        app:layout_constraintLeft_toLeftOf="@id/guideline3"/>
+        app:layout_constraintLeft_toLeftOf="@id/guideline3"
+        app:layout_constraintLeft_toRightOf="@id/guideline4"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
@@ -82,12 +83,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.98" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.13" />
+        app:layout_constraintGuide_percent="0.16" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.86" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
